--- a/Css/booker.css
+++ b/Css/booker.css
@@ -45,82 +45,57 @@ body{
 
 .bookbtn {
     background-color: rgba(241, 164, 13, 0.6);
-}
 
-.reservation {
-    display: none;
-    z-index: 1;
-    background-color: rgba(0,0,0,0.6);
-    padding-top: 200px;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    position: fixed;
-    left: 0;
-    top: 0;
 }
 
 .reserve-content {
+    display: none;
     margin: auto;
-    background-color: grey;
-    width: 90%;
-    height: 250px;
     text-align: center;
     box-sizing: border-box;
-    border-radius: 20px;
-    font-weight: bolder;
+    font-weight: bold;
 }
 
 .reserve-content input {
     border-radius: 5px;
 }
 
-.reserve-header {
-    height: 40px;
-    background-color: rgb(67, 58, 61);
-    color: rgba(241, 164, 13, 1);
-    font-weight: bolder;
-}
 
-.reserve-header span{
-    position: relative;
-    top: 13px;
-    left: 5px;
-}
 
-.closebtn {
-    color: white;
-    border: none;
-    font-size: 10px;
-    height: 15px;
-    background-color: black;
-    float: right;
-}
-
-#checkin, #checkout {
+.checkin, .checkout {
     margin-bottom: 10px;
     width: 50%;
 }
 
-#sendbtn {
+.sendbtn {
     background-color: rgba(241, 164, 13, 0.6);
     margin-bottom: 15px;
 }
 
-#name {
+.name {
     width: 60%;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-#tel, #mail {
+.tel, .mail {
     width: 40%;
     margin-bottom: 10px;
 }
 
-#nights, #amount {
+.nights, .amount {
     width: 40%;
     border: thin solid rgba(241, 164, 13, 1);
+}
+
+.closebtn {
+    background: none;
+    border-radius: 20%;
+}
+.cancelbtn {
+    display: none;
+    background-color: rgba(241, 164, 13, 0.6);
+    margin-top: 15px;
 }
 
 @media screen and (min-width: 420px) {
